# 32417f85d48b82ba2ef81a4d9b884ec87a3d54fdc1c9f31b8f6ae1d337191752_aqi_probability_prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/raw/: cities.csv
notebooks/: 01_main copy.ipynb  01_main.ipynb  02_aqi_breakpoints.ipynb
output/: 00_results.txt
reports/: metrics.txt
src/: __init__.py  constants.py  data_preprocessing.py  evaluation.py  feature_engineering.py  get_hash.py  loss.py  model_training.py  models.py  run_pipeline.py  torch_datasets.py  trainer.py  visualizers.py
