[project]
name = "aqi-probability-prediction"
version = "0.1.0"
description = "AQI Probability Prediction Pipeline"
readme = "README.md"
requires-python = "==3.10.11"

dependencies = [
  "imageio==2.36.1",
  "ipykernel==6.29.5",
  "ipywidgets==8.1.7",
  "matplotlib==3.10.0",
  "numpy==1.26.4",
  "optuna==4.3.0",
  "pandas==2.2.2",
  "pillow==11.0.0",
  "pip==25.1.1",
  "pre-commit==4.2.0",
  "requests==2.32.4",
  "scipy==1.12.0",
  "tqdm==4.67.1",
  "widgetsnbextension==4.0.14"
]

[project.optional-dependencies]
cuda = [
  "torch",
  "torchvision",
  "torchaudio"
]
metal = [
  "torch",
  "torchvision",
  "torchaudio"
]
cpu = [
  "torch",
  "torchvision",
  "torchaudio"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
